--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         navLinks.style.right = "0";
       }
       function hideMenu() {
-        navLinks.style.right = "-200px";
+        navLinks.style.right = "-100vw";
       }
     </script>
 
